$Id: History,v 1.3 2001-01-25 12:09:44 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/OpenGL
-------------------------------------

25th January 2001  John Allison  (opengl-V03-00-00)
- Implemented running re-calculation of up-vector in the case of "object
  rotation" (lights move with camera) to prevent "flipping" of view when
  camera passes through up-vector.  Note that the default is "camera
  rotation" (lights do not move with camera, i.e., remain fixed relative
  to object) so the default is that this "flipping" can happen.  To set
  "object rotation" (lights move with camera) use
  /vis/lights/move_with_camera true (soon to be
  /vis/viewer/set/lights move-with-camera) or click "Object" radio button
  on Rotation Panel in OpenGLXm mode.
- Changed some objects to references for efficiency.  E.g.:
  const G4Vector3D& vp = pView->fVP.GetViewpointDirection ().unit ();

22nd May 2000  John Allison  (opengl-V01-01-00)
- Fixed slow response of 2nd window of OpenGLXm.  Worked around Mesa bug
  by sharing static visuals in G4OpenGLXViewer (Guy Barrand):
    static XVisualInfo* vi_single_buffer;
    static XVisualInfo* vi_double_buffer;